--- a/src/pages/modalpage/modalpage.scss
+++ b/src/pages/modalpage/modalpage.scss
@@ -1,3 +1,31 @@
 page-modalpage {
 
+
+    p{color: #202020;}
+    .btn_modal_close{
+        position: absolute;
+        top:0px;
+        right: 5px;
+    }
+    
+    .img_content{
+    img{ margin-top: 0px;}
+    }
+
+    h4.title_profile{
+        color: #FFFFFF;
+        position: absolute;
+        font-size: 2.3em;
+        top:270px;
+        left: 30px;
+    }
+    span.ocupation_prof{
+        color: #FFFFFF;
+        position: absolute;
+        font-size: 1.25em;
+        top:320px;
+        left: 35px;
+    }
+
 }
+
