modal style staff

--- a/src/pages/modalpage/modalpage.scss
+++ b/src/pages/modalpage/modalpage.scss
@@ -12,6 +12,13 @@ page-modalpage {
     img{ margin-top: 0px;}
     }
 
+   .icon ion-icon{
+        color:#202020;
+        font-size: 2em;
+
+    }
+      
+
     h4.title_profile{
         color: #FFFFFF;
         position: absolute;
